# xdeya-altimeter

./: HISTORY  README.md  button.cpp  def.h  display.cpp  eepromcfg.cpp  fw  gpsadv.ino  menu.cpp  xdeya-altimeter.ino
app/: CMakeLists.txt  apphnd.cpp  apphnd.h  devinfo.cpp  devinfo.h  formauth.cpp  formauth.h  formauth.ui  jmpinfo.cpp  jmpinfo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modbtsrch.cpp  modbtsrch.h  moddevsrch.cpp  moddevsrch.h  modlogbook.cpp  modlogbook.h  netprocess.cpp  netprocess.h  nettypes.h  trackhnd.cpp  trackhnd.h  trkbutton.cpp  trkbutton.h  trkinfo.cpp  trkinfo.h  wifidevicediscovery.cpp  wifidevicediscovery.h  wifiinfo.cpp  wifiinfo.h  xdeya.pro  xdeya.qrc  xdeya.rc
app/BinProto/: BinProto.cpp  BinProto.h  netsocket.h  nettcpsocket.cpp  nettcpsocket.h
app/Info/: Info.cmake.macos.plist  Info.ios.plist  Info.ios.plist.app.in  Info.qmake.ios.plist  Info.qmake.macos.plist
app/icons/: xdeya.icns  xdeya.psd
app/icons/default/: index.theme
app/page/: auth.qml  jmpinfo.qml  jmplist.qml  main.qml  trklist.qml  trkview.qml  wifipass.qml
app/res/: navi.html
arch.hw/v0.1/: schem1.drawio
arch.hw/v0.2/: schem2.drawio
arch.hw/v0.3/box/: gpsadv.skp  xdeya-box.v0.3-top.stl
arch.hw/v0.3/hw/: xdeya-cache.lib  xdeya.kicad_pcb
arch.hw/v0.4.1/box/: gpsadv-box-bottom-cord.stl  xdeya-box.v0.4.1-bottom-lent.stl  xdeya-box.v0.4.1-long-bottom-cord.stl  xdeya-box.v0.4.1-long-bottom-lent.stl  xdeya-box.v0.4.1-long-top.stl  xdeya-long-noroundcorner.skp  xdeya-long.skp  xdeya-noroundcorner.skp
arch.hw/v0.4.1/hw/: fp-info-cache  xdeya-cache.lib  xdeya.kicad_pcb  xdeya.sch
arch.hw/v0.5/hw/: fp-info-cache  xdeya-cache.lib  xdeya.kicad_pcb  xdeya.pro  xdeya.sch
arch/v0.3/box/: gpsadv-box-bottom.stl
arch/v0.3/hw/: gpsalthw.pro
arch/v0.4/hw/: gpsalthw-cache.lib  gpsalthw.kicad_pcb  gpsalthw.sch
box/: gpsadv-box-bottom-bold.stl  gpsadv-box-bottom.stl  gpsadv-box-top.stl  gpsadv-noroundcorner.skp  gpsadv.FCStd  gpsadv.skp  xdeya-box-int-bottom-cord.stl  xdeya-box-int-bottom-lent.stl  xdeya-box-int-top.stl  xdeya-ext-noroundcorner.skp  xdeya-int-noroundcorner.skp  xdeya-int.skp  xdeya-long-box-bottom-lent.stl  xdeya-long-box-top.stl  xdeya-long-noroundcorner.skp  xdeya-long.skp
doc/: compile.sh  download.md  fix-links-single-file.lua  privacy.md  style-ref.docx  verifone.md
doc/analytic/: README.md  antenna.md  compas.md
doc/code/: README.md
doc/diagram/: control.drawio
doc/models/: 01.v.0.3.md  02.v.0.4.md  03.v.0.5.md  README.md
doc/source/: README.md
doc/test/: README.md
doc/userman/: 00.header.md  01.getting-started.md  02.main-display.md  03.menu.md  04.altimeter.md  05.navigation.md  06.automatic.md  07.power.md  08.syncronization.md  09.firmware.md  10.system.md  11.documentation.md  README.md  compile.howdo.sh  compile.menu.sh  compile.simple.sh  compile.tech.sh  simple.md  xdeya-howdo.docx  xdeya-menu.docx  xdeya-simple.docx  xdeya-tech.docx
doc/userman/howdo/: 00.header.md  01.power.md  02.navigation.md  02.track.md  03.syncronization.md  05.firmware.md  06.system.md  README.md
doc/userman/menu/: 00.header.md  00.start.md  01.navipoint.md  02.jumpcount.md  03.logbook.md  04.option.md  05.system.md  (+2 more)
hw/: fp-lib-table  gpsalthw.kicad_pcb  gpsalthw.pro  gpsalthw.sch  xdeya.kicad_pcb  xdeya.kicad_prl  xdeya.kicad_pro  xdeya.kicad_sch  xdeya.sch
hw/axp2101/: axp2101.bak
hw/rfshield.pretty/: BMI_16.5x16mm.kicad_mod
src/: altcalc.cpp  altcalc.h  altimeter.cpp  altimeter.h  button.cpp  button.h  clock.cpp  clock.h  display.cpp  display.h  eeprom.h  gps.cpp  gps.h  log.cpp  log.h  logfile.cpp  logfile.h  mode.h  monlog.h  power.cpp  power.h  timer.cpp  timer.h  track.cpp  track.h
src/cfg/: jump.cpp  jump.h  main.cpp  main.h  point.cpp  point.h  webjoin.cpp  webjoin.h
src/core/: cks.cpp  cks.h  file.cpp  file.h  filebin.cpp  filebin.h  filetxt.cpp  filetxt.h  worker.cpp  worker.h  workerkey.h  workerloc.h
src/eeprom/: cfg.cpp  inf.cpp  logbook.cpp  logbook.h
src/file/: log.cpp  log.h  track.cpp  track.h  veravail.cpp  veravail.h  wifi.cpp  wifi.h
src/filtlib/: filter.h  filter_avg.h  filter_avg2.h  filter_avgdeg.h  filter_kalman.h  filter_ltsqrt.h  filter_maxaccel.h  ring.h
src/gps/: compass.cpp  compass.h  proc.cpp  proc.h  ubloxproto.cpp  ubloxproto.h
src/jump/: altcalc.cpp  altcalc.h  logbook.cpp  logbook.h  proc.cpp  proc.h  ringcursor.h  track.cpp  track.h
src/menu/: base.cpp  base.h  file.cpp  file.h  logbook.cpp  logbook.h  static.cpp  static.h  wifi.cpp  wifi.h
src/mode/: logbook.cpp  main.cpp  menu.cpp  netsync.cpp  wifi.cpp
src/navi/: compass.cpp  compass.h  proc.cpp  proc.h  ubloxproto.cpp  ubloxproto.h
src/net/: binproto.cpp  binproto.h  bt.cpp  bt.h  data.cpp  data.h  netsocket.h  netsync.cpp  netsync.h  srv.cpp  srv.h  wifi.cpp  wifi.h  wifiapp.cpp  wifiapp.h  wifisync.cpp  wifisync.h
src/sys/: backup.cpp  fwupsd.cpp  sys.h
src/view/: base.cpp  base.h  info.cpp  info.h  infodebug.cpp  infosat.cpp  logo.cpp  logo.h  main.cpp  main.h  mainalt.cpp  mainaltchart.cpp  mainaltnav.cpp  maingps.cpp  mainlog.cpp  mainnav.cpp  mainnavpath.cpp  maintime.cpp  menu.cpp  menu.h  menufile.cpp  menufwsd.cpp  menulogbook.cpp  menumagcalib.cpp  menustatic.cpp  menuwifisync.cpp  navverinfo.cpp  netauth.cpp  netauth.h  operation.cpp  text.en.h  text.h  text.ru.font.c  text.ru.h
xdeya-app/: pubspec.yaml
xdeya-app/icon/: xdeya.ai  xdeya.psd
xdeya-app/lib/: main.dart  pager.dart  titlebar.dart
(+45 files in other folders)
